[tool.poetry]
name = "testing_actions"
version = "0.1.0"
description = ""
authors = ["StarrFox <starrfox6312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^3.2.1"
sphinx_rtd_theme = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
